k8s/infra/auth/authelia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
spec:
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
        - name: authelia
          volumeMounts:
            - name: secrets
              mountPath: /secrets
              readOnly: true
            - name: rsa-jwk
              mountPath: /secrets/rsa-jwk
              readOnly: true
            - name: ecdsa-jwk
              mountPath: /secrets/ecdsa-jwk
              readOnly: true
      volumes:
        - name: secrets
          secret:
            secretName: authelia-secrets
        - name: rsa-jwk
          secret:
            secretName: authelia-rsa-jwk
        - name: ecdsa-jwk
          secret:
            secretName: authelia-ecdsa-jwk
